--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
         show-sql: true
     kafka:
         producer:
-            bootstrap-servers: 127.0.0.1:9092
+            bootstrap-servers: localhost:9092
             key-serializer: org.apache.kafka.common.serialization.StringSerializer
             value-serializer: org.apache.kafka.common.serialization.StringSerializer
             group-id: group_id
@@ -33,7 +33,7 @@ auto:
             enable: true
 
 server:
-    port: 8085
+    port: 80
 
 url:
     auth-url: https://run.mocky.io/v3/5794d450-d2e2-4412-8131-73d0293ac1cc
