feat: Autenticacao e Autorizacao usando Spring Security e JWT Token

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -37,3 +37,8 @@ server:
 
 url:
     auth-url: https://run.mocky.io/v3/5794d450-d2e2-4412-8131-73d0293ac1cc
+
+api:
+    security:
+        token:
+            secret: ${JWT_SECRET:my-secrety-key}
