--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 	</parent>
 
 	<groupId>com.exemple</groupId>
-	<artifactId>simplifiedpicpay</artifactId>
+	<artifactId>simplified-picpay</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>simplifiedpicpay</name>
+	<name>simplified-picpay</name>
 	<description>Simplified Picpay Project</description>
 
 	<properties>
@@ -35,6 +35,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 		<dependency>
@@ -73,7 +78,24 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.4.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 
