--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -37,7 +37,7 @@ server:
   port: 80
 
 url:
-  auth-url: https://run.mocky.io/v3/5794d450-d2e2-4412-8131-73d0293ac1cc
+  auth-url: https://util.devi.tools/api/v2/authorize
 
 api:
   security:
